--- a/sass/components/header_components/_search.scss
+++ b/sass/components/header_components/_search.scss
@@ -46,7 +46,7 @@
   &__icon {
     width: 1.8rem;
     height: 1.8rem;
-    @include centering;
+    @include absCenter;
 
     use {
       fill: $color-white;
