--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -2,7 +2,7 @@
   width: 23.6rem;
   height: 41.8rem;
 
-  // background-color: aquamarine;
+  background-color: aquamarine;
 
   &__image {
     position: relative;
