--- a/css/style.css
+++ b/css/style.css
@@ -256,27 +256,37 @@ body {
   .swiper-pagination {
     display: none; } }
 
-.top-products__header {
-  margin: 3.9rem 0 .7rem 3rem;
-  font-size: 2.4rem;
-  line-height: 2;
-  color: #000; }
-
-.top-products__link {
-  margin-left: 3rem; }
-  .top-products__link a {
-    text-decoration: none;
-    font-size: 1.4rem;
-    color: #ff613b; }
-
-.top-products__swiper {
-  flex: 0 0 88.2137628111%;
-  background-color: #fff;
-  margin: 3.9rem 3rem 4rem 3rem; }
+.top-products {
+  position: relative; }
+  .top-products__header {
+    position: absolute;
+    margin: 3.9rem 0 .7rem 3rem;
+    font-size: 2.4rem;
+    line-height: 2;
+    color: #000;
+    z-index: 9999; }
+  .top-products__link {
+    margin-left: 3rem; }
+    .top-products__link a {
+      position: absolute;
+      text-decoration: none;
+      font-size: 1.4rem;
+      color: #ff613b; }
+  .top-products__swiper {
+    flex: 0 0 88.2137628111%;
+    background-color: #fff;
+    margin: 3.9rem 3rem 4rem 3rem; }
+  .top-products__wrapper {
+    padding-top: 5.6rem; }
+  .top-products__button-next {
+    position: absolute;
+    top: 5px;
+    color: red; }
 
 .card {
   width: 23.6rem;
-  height: 41.8rem; }
+  height: 41.8rem;
+  background-color: aquamarine; }
   .card__image {
     position: relative;
     margin: 1rem;
