--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -2,7 +2,7 @@
   display: flex;
   padding-top: 5.1rem;
 
-  background-color: orangered;
+  background-color: #fafafa;
 
   @include respond(phone) {
     padding-top: 6rem;
