--- a/sass/components/_top-products-swiper.scss
+++ b/sass/components/_top-products-swiper.scss
@@ -1,20 +1,20 @@
 .top-products {
-  position: relative;
-
   &__header {
     position: absolute;
-    margin: 3.9rem 0 .7rem 3rem;
+    top: 3.9rem;
+    left: 3rem;
+    z-index: 2; //overlay swiper
+  }
+
+  &__title {
+    margin-bottom: .7rem;
     font-size: 2.4rem;
     line-height: 2;
     color: $color-black;
-    z-index: 9999;
   }
 
   &__link {
-    margin-left: 3rem;
-
     a {
-      position: absolute;
       text-decoration: none;
       font-size: $font-size-md;
       color: $primary-color;
@@ -24,18 +24,32 @@
   &__swiper {
     flex: 0 0 88.2137628111%;
     background-color: #fff;
-    margin: 3.9rem 3rem 4rem 3rem;
+    margin: 0;
+    position: relative;
   }
 
-  &__wrapper {
-    padding-top: 5.6rem;
+  &__swiper-wrapper {
+    padding-top: 14.4rem;
   }
 
-  &__button-next {
+  &__slider-arrows {
     position: absolute;
-    top: 5px;
-    color: red;
+    top: 5.6rem;
+    right: 3.6rem;
+    width: 6.7rem;
+    height: 2.2rem;
+    display: flex;
+    justify-content: space-between;
   }
 
-  &__button-prev {}
+  &__button-next,
+  &__button-prev {
+    width: 1.8rem;
+    height: 1.8rem;
+    cursor: pointer;
+
+    &::after {
+      content: '';
+    }
+  }
 }
