--- a/sass/layout/_top-products.scss
+++ b/sass/layout/_top-products.scss
@@ -1,7 +1,14 @@
 .top-products {
-  display: flex;
-  flex-direction: column;
-  margin: 0 8rem 0 8rem;
+  padding: 9rem 8rem 4rem 8rem;
+  background-color: #fafafa;
+  background-color: lime;
 
-  background-color: olivedrab;
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin: 3.9rem 3rem 0 3rem;
+    border-radius: 1rem;
+    overflow: hidden;
+  }
 }
