--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,4 +1,6 @@
 // FONT
+$font-size-massive: 3.2rem;
+$font-size-huge: 2.4rem;
 $font-size-big: 1.8rem;
 $default-font-size: 1.6rem;
 $font-size-md: 1.4rem;
