--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -33,3 +33,33 @@ body {
     color: $color-black;
   }
 }
+
+.heading-primary {
+  color: $color-black;
+  font-size: $font-size-massive;
+  font-weight: 400;
+  line-height: 4;
+  letter-spacing: 0;
+}
+
+.heading-secondary {
+  color: $color-black;
+  font-size: $font-size-huge;
+  font-weight: 400;
+  line-height: 3.2;
+  letter-spacing: 0;
+}
+
+.heading-tertiary {
+  color: $color-black;
+  font-size: $font-size-big;
+  font-weight: 400;
+  line-height: 2.7;
+  letter-spacing: 0;
+}
+
+.paragraph {
+  font-size: $font-size-md;
+  font-family: "Helvetica Neue LTGEOW 82-55 Rm";
+  font-weight: 400;
+}
