--- a/sass/main.scss
+++ b/sass/main.scss
@@ -28,6 +28,7 @@
 @import "layout/header";
 @import "layout/main";
 @import "layout/top-products";
+@import "layout/section-about";
 
 // pages
 @import "pages/home";
