--- a/sass/components/_top-products-swiper.scss
+++ b/sass/components/_top-products-swiper.scss
@@ -22,21 +22,26 @@
   }
 
   &__swiper {
-    flex: 0 0 88.2137628111%;
+    width: 100%;
     background-color: #fff;
     margin: 0;
     position: relative;
   }
 
   &__swiper-wrapper {
-    padding-top: 14.4rem;
+    padding: 14.4rem 3rem 4rem 3rem;
+
+    @include respond(phone) {
+      padding-left: 0;
+      padding-right: 0;
+    }
   }
 
   &__slider-arrows {
     position: absolute;
     top: 5.6rem;
     right: 3.6rem;
-    width: 6.7rem;
+    width: 8.7rem;
     height: 2.2rem;
     display: flex;
     justify-content: space-between;
