--- a/sass/layout/_top-products.scss
+++ b/sass/layout/_top-products.scss
@@ -1,13 +1,11 @@
 .top-products {
-  padding: 9rem 8rem 4rem 8rem;
+  max-width: 88.140556369%;
+  margin: 9rem auto 0;
   background-color: #fafafa;
   background-color: lime;
 
   &__wrapper {
-    display: flex;
-    flex-direction: column;
     position: relative;
-    margin: 3.9rem 3rem 0 3rem;
     border-radius: 1rem;
     overflow: hidden;
   }
