--- a/sass/components/_top-products-swiper.scss
+++ b/sass/components/_top-products-swiper.scss
@@ -23,7 +23,7 @@
 
   &__swiper {
     width: 100%;
-    background-color: #fff;
+    background-color: $color-white;
     margin: 0;
     position: relative;
   }
