--- a/sass/components/main_components/_main-swiper.scss
+++ b/sass/components/main_components/_main-swiper.scss
@@ -16,7 +16,7 @@
     width: 100%;
 
     &:first-child {
-      background: url(../../../assets/img/Rectangle_218@4x.webp);
+      background: url(../assets/img/Rectangle_218@4x.webp);
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
