--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,7 +6,7 @@
 @import "base/base";
 // @import "base/animation";
 @import "base/typography";
-// @import "base/utilities";
+@import "base/utilities";
 
 // header components
 @import "components/header_components/logo";
@@ -29,6 +29,7 @@
 @import "layout/main";
 @import "layout/top-products";
 @import "layout/section-about";
+@import "layout/footer";
 
 // pages
 @import "pages/home";
