--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,3 +1,11 @@
 body {
+  // general
   background-color: $color-grey-light;
+
+
+  // footer
+  .footer {
+    margin-top: 9.7rem;
+    background-color: $color-white;
+  }
 }
