--- a/css/style.css
+++ b/css/style.css
@@ -485,7 +485,7 @@ body {
       justify-content: center; } }
 
 .footer__logo img {
-  height: 4rem; }
+  height: 6rem; }
 
 @media (max-width: 37.5em) {
   .footer__logo {
@@ -513,8 +513,8 @@ body {
 .footer__socials-link {
   display: inline-block; }
   .footer__socials-link svg {
-    width: 1.8rem;
-    height: 1.8rem; }
+    width: 18px;
+    height: 18px; }
     .footer__socials-link svg:hover {
       fill: #ff613b; }
   .footer__socials-link:not(:last-child) {
@@ -534,8 +534,10 @@ body {
       align-items: center;
       justify-content: center;
       height: 18rem; }
-      .footer__bottom p:not(:last-child) {
-        margin-bottom: 1rem; } }
+      .footer__bottom p {
+        font-size: 1.2rem; }
+        .footer__bottom p:not(:last-child) {
+          margin-bottom: 1rem; } }
 
 body {
   background-color: #fafafa; }
