--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -13,4 +13,5 @@ $secondary-color: #32125b;
 $color-white: #fff;
 $color-black: #000;
 $color-very-dark-grey: #171717;
-$color-grey-light: #fafafa;
+$color-light-grey: #D0D0D0;
+$color-very-light-grey: #fafafa;
