--- a/sass/components/header_components/_search.scss
+++ b/sass/components/header_components/_search.scss
@@ -13,7 +13,7 @@
     border-radius: .5rem;
 
     // skin
-    background-color: $color-grey-light;
+    background-color: $color-very-light-grey;
     font-family: "Helvetica Neue LTGEOW 82-55 Rm";
 
     &::placeholder {
