--- a/sass/main.scss
+++ b/sass/main.scss
@@ -30,6 +30,7 @@
 @import "layout/top-products";
 @import "layout/section-about";
 @import "layout/footer";
+@import "layout/menu";
 
 // pages
 @import "pages/home";
