--- a/sass/components/main_components/_main-swiper.scss
+++ b/sass/components/main_components/_main-swiper.scss
@@ -11,20 +11,13 @@
   }
 
   &--slide {
-    background-color: lime;
     text-align: center;
     width: 100%;
-
-    &:first-child {
-      background: url(../assets/img/Rectangle_218@4x.webp);
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center;
-    }
 
     img {
       width: 100%;
       height: 100%;
+      object-fit: cover;
     }
   }
 }
