--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,6 +4,8 @@
   justify-content: space-between;
   align-items: center;
 
+  background-color: $color-white;
+
   @include respond(phone) {
     display: none;
   }
