--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -2,10 +2,9 @@
   width: 23.6rem;
   transition: all .01s ease;
   border: 1px solid transparent;
+  background-color: $color-white;
 
   &:hover {
-    position: absolute;
-    z-index: 3;
     border-radius: 1rem;
     border: 1px solid #E2E7ED;
     transform: scale(1.01);
